--- a/NavBar.html
+++ b/NavBar.html
@@ -48,5 +48,6 @@ content="ie=edge">
                 JavaScript is high-level, often just-in-time complied,and multi-paradigm.
             </p> 
         </div>
-    </div>            
+    </div>    
+    <p>Git is fun</p>        
 </div>
